// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disclosure ExpandableSection 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section pf-m-display-lg pf-m-limit-width"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-6"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-unified"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      hidden=""
      id="content-id"
      role="region"
    >
      test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExpandableSection 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-unified"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      hidden=""
      id="content-id"
      role="region"
    >
      test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders ExpandableSection expanded 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section pf-m-expanded"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        aria-expanded="true"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-2"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-unified"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      id="content-id"
      role="region"
    >
       test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders ExpandableSection indented 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section pf-m-expanded pf-m-indented"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        aria-expanded="true"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-7"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-unified"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      id="content-id"
      role="region"
    >
       test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders Uncontrolled ExpandableSection 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-5"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon pf-m-start"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-unified"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </span>
        <span
          class="pf-v6-c-button__text"
        >
          Show More
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      hidden=""
      id="content-id"
      role="region"
    >
       test 
    </div>
  </div>
</DocumentFragment>
`;
